--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget "https://cran.rstudio.com/bin/macosx/$(wget -qO- https://cran.rstudio.com/bin/macosx/ | sed -n 's/.*href="\(R-[^"]*.pkg\)".*/\1/p' | head -n 1)"; fi
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo installer -pkg R-*.pkg -target /; fi
 script:
+- R -e 'install.packages("inline")'
+- R -e 'install.packages("readr")'
 - R CMD build .
 - R CMD check *tar.gz
