--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,19 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
-language: julia
+language: r
 sudo: required
-julia:
-  - 0.5
-  - 0.6
+r:
+  - release
+  - devel
+env:
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.0-linux-x86_64.tar.gz"
 before_install:
-  # linux
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo add-apt-repository -y "deb http://cran.rstudio.com/bin/linux/ubuntu $(lsb_release -s -c)/"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq -y; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install git r-base r-base-dev r-recommended -y; fi
-
-  # osx
-  # faster than using homebrew/science tap
-  # but no permalink to release download
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then wget "https://cran.rstudio.com/bin/macosx/$(wget -qO- https://cran.rstudio.com/bin/macosx/ | sed -n 's/.*href="\(R-[^"]*.pkg\)".*/\1/p' | head -n 1)"; fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then sudo installer -pkg R-*.pkg -target /; fi
-
-  - mkdir -p mkdir $HOME/R/library
-  - echo 'R_LIBS_USER="~/R/library"' >  $HOME/.Renviron
-  - Rscript -e 'install.packages("inline", repos="http://cran.rstudio.com/")'
-  - Rscript -e 'install.packages("readr", repos="http://cran.rstudio.com/")'
+  - mkdir -p mkdir $HOME/julia
+  - cd $HOME/julia
+  - wget $JULIA_URL
+  - tar -xvzf julia-0.6.0-linux-x86_64.tar.gz
+  - mv $(tar tzf julia-0.6.0-linux-x86_64.tar.gz | head -1 | sed -e 's/\/.*//') julia-0.6.0
+  - export PATH=$PATH:$HOME/julia/julia-0.6.0/bin
 script:
 - R CMD build .
 - R CMD check *tar.gz
+cache: packages
