Seems to install Julia on travis correctly.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,10 @@ r:
 env:
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.0-linux-x86_64.tar.gz"
 before_install:
-  - mkdir -p mkdir $HOME/julia
-  - wget $JULIA_URL -O $HOME/julia/julia.tar.gz
-  - tar -xzvf $HOME/julia/julia.tar.gz
-  - mv $(tar tzf $HOME/julia/julia.tar.gz | head -1 | sed -e 's/\/.*//') julia
-  - export PATH=$PATH:/$HOME/julia/julia/bin
+  - wget $JULIA_URL -O /tmp/julia.tar.gz
+  - tar -xzvf /tmp/julia.tar.gz -C /tmp
+  - mv /tmp/$(tar tzf /tmp/julia.tar.gz | head -1 | sed -e 's/\/.*//') /$HOME/julia
+  - export PATH=$PATH:/$HOME/julia
 script:
 - R CMD build .
 - R CMD check *tar.gz
