--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ r:
   - devel
 env:
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/linux/x64/0.6/julia-0.6.0-linux-x86_64.tar.gz"
+addons:
+      apt:
+        sources: [ 'ubuntu-toolchain-r-test']
+        packages: ['libstdc++6']
 before_install:
   - wget $JULIA_URL -O /tmp/julia.tar.gz
   - tar -xzvf /tmp/julia.tar.gz -C /tmp
