--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_install:
   - curl -A "$CURL_USER_AGENT" -s -L --retry 7 $JULIA_URL | tar -C ~/julia -x -z --strip-components=1 -f -
   - export PATH="${PATH}:${HOME}/julia/bin"
   - julia -e 'versioninfo()'
+  - julia -e 'Pkg.add("RCall")'
+  - julia -e 'using RCall'
 script:
 - R CMD build .
 - R CMD check *tar.gz
