Try to print out the R version information and set the LD_LIBRARY_PATH.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ before_install:
   - mkdir -p ~/julia
   - curl -A "$CURL_USER_AGENT" -s -L --retry 7 $JULIA_URL | tar -C ~/julia -x -z --strip-components=1 -f -
   - export PATH="${PATH}:${HOME}/julia/bin"
+  - Rscript -e 'version'
+  - export LD_LIBRARY_PATH=$(R RHOME)/lib:$LD_LIBRARY_PATH
   - julia -e 'versioninfo()'
   - julia -e 'Pkg.add("RCall")'
   - julia -e 'using RCall'
