--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ before_install:
   - julia -e 'versioninfo()'
   - julia -e 'Pkg.add("RCall")'
   - R RHOME
-  - julia -e 'readchomp(`R RHOME`)'
-  - julia -e 'Rhome = readchomp(`R RHOME`); libR = joinpath(Rhome,"lib","libR.$(Libdl.dlext)"); println(isdir(Rhome)); println(isfile(libR)); Libdl.dlopen_e(libR)'
+  - julia -e 'println(readchomp(`R RHOME`))'
+  - julia -e 'Rhome = readchomp(`R RHOME`); libR = joinpath(Rhome,"lib","libR.$(Libdl.dlext)"); println(Rhome); println(isdir(Rhome)); println(libR); println(isfile(libR)); println(Libdl.dlopen_e(libR))'
   - julia -e 'using RCall'
 script:
 - R CMD build .
