--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 language: r
-sudo: required
+sudo: false
 r:
   - release
   - devel
