--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ before_install:
   - sudo gdebi  --non-interactive /tmp/rstudio.deb
   - rm /tmp/rstudio.deb
 
+  - sudo apt-get install xvfb
+
   - mkdir -p mkdir $HOME/R/library
   - echo 'R_LIBS_USER="~/R/library"' >  $HOME/.Renviron
   - Rscript -e 'install.packages("inline", repos="http://cran.rstudio.com/")'
@@ -57,4 +59,4 @@ before_install:
 script:
 - R CMD build .
 - R CMD check *tar.gz
-- rstudio
+- xvfb-run -a rstudio
