Add test for RStudio.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ before_install:
   - echo 'R_LIBS_USER="~/R/library"' >  $HOME/.Renviron
   - Rscript -e 'install.packages("inline", repos="http://cran.rstudio.com/")'
   - Rscript -e 'install.packages("testthat", repos="http://cran.rstudio.com/")'
+  - Rscript -e 'install.packages("rstudioapi", repos="http://cran.rstudio.com/")'
 
   #- Rscript -e 'sessionInfo()'
   #- julia -e 'versioninfo()'
@@ -61,4 +62,3 @@ before_install:
 script:
 - R CMD build .
 - R CMD check *tar.gz
-- rstudio
