--- a/.travis.yml
+++ b/.travis.yml
@@ -69,5 +69,5 @@ script:
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_code_in_rstudio('q()'))"
 
 - Rscript -e 'remotes::install_github("Non-Contradiction/JuliaCall")'
+- Rscript -e "library(TestWithRStudio); stopifnot(!check_code_in_rstudio('library(JuliaCall); julia <- julia_setup(startup_safe = TRUE); julia$call(\'sqrt\', 2); q(save = \'no\')', 60))"
 - Rscript -e "library(TestWithRStudio); stopifnot(check_code_in_rstudio('library(JuliaCall); julia <- julia_setup(startup_safe = TRUE); julia$call(\'sqrt\', 2)', 60))"
-- Rscript -e "library(TestWithRStudio); stopifnot(!check_code_in_rstudio('library(JuliaCall); julia <- julia_setup(startup_safe = TRUE); julia$call(\'sqrt\', 2); q()', 60))"
