Revert "Try again?"
This reverts commit 022271a420c761824b6be1f261c29284b7a1c85c.

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,4 +71,4 @@ script:
 - Rscript -e 'remotes::install_github("Non-Contradiction/JuliaCall")'
 - julia -e 'Pkg.add("RCall")'
 - julia -e 'using RCall'
-- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(); get(\'call\', julia)(\'sqrt\', 2)', 60))"
+- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(startup_safe = TRUE); get(\'call\', julia)(\'sqrt\', 2)', 60))"
