Try to precompile RCall in setup.jl.

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ script:
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
 
 - Rscript -e 'remotes::install_github("Non-Contradiction/JuliaCall")'
-- julia -e 'Pkg.add("RCall")'
-- julia -e 'using RCall'
-- julia -e 'Base.compilecache("RCall")'
+#- julia -e 'Pkg.add("RCall")'
+#- julia -e 'using RCall'
+#- julia -e 'Base.compilecache("RCall")'
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(startup_safe = TRUE); get(\'call\', julia)(\'sqrt\', 2)', 60))"
