--- a/.travis.yml
+++ b/.travis.yml
@@ -71,5 +71,5 @@ script:
 - Rscript -e 'remotes::install_github("Non-Contradiction/JuliaCall")'
 #- julia -e 'Pkg.add("RCall")'
 #- julia -e 'using RCall'
-#- julia -e 'Base.compilecache("RCall")'
+- julia -e 'Base.compilecache("RCall")'
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(startup_safe = TRUE); get(\'call\', julia)(\'sqrt\', 2)', 60))"
