--- a/.travis.yml
+++ b/.travis.yml
@@ -84,7 +84,7 @@ script:
 
 - Rscript -e 'install.packages("remotes", repos="http://cran.rstudio.com/")'
 - Rscript -e 'remotes::install_github("Non-Contradiction/TestWithRStudio")'
-- Rscript -e "library(TestWithRStudio); stopifnot(check_rstudio())"
+- Rscript -e "library(TestWithRStudio); check_rstudio()"
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
 
