--- a/.travis.yml
+++ b/.travis.yml
@@ -82,13 +82,15 @@ script:
 - R CMD build .
 - R CMD check *tar.gz
 
-- Rscript -e 'install.packages("remotes", repos="http://cran.rstudio.com/")'
-- Rscript -e 'remotes::install_github("Non-Contradiction/TestWithRStudio")'
+- Rscript -e 'install.packages("devtools", repos="http://cran.rstudio.com/")'
+- Rscript -e 'devtools::run_examples(run = FALSE)'
+
+- Rscript -e 'devtools::install_github("Non-Contradiction/TestWithRStudio")'
 - Rscript -e "library(TestWithRStudio); check_rstudio()"
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
 
-- Rscript -e 'remotes::install_github("Non-Contradiction/JuliaCall")'
+- Rscript -e 'devtools::install_github("Non-Contradiction/JuliaCall")'
 #- julia -e 'Pkg.add("RCall")'
 #- julia -e 'using RCall'
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(); get(\'call\', julia)(\'sqrt\', 2)', 60))"
