--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,8 +80,10 @@ test_script:
 - R CMD build .
 - R CMD check *tar.gz
 
-- Rscript -e "install.packages(\"remotes\", repos=\"http://cran.rstudio.com/\")"
-- Rscript -e "remotes::install_github(\"Non-Contradiction/TestWithRStudio\")"
+- Rscript -e "install.packages(\"devtools\", repos=\"http://cran.rstudio.com/\")"
+- Rscript -e "devtools::run_examples(run = FALSE)"
+
+- Rscript -e "devtools::install_github(\"Non-Contradiction/TestWithRStudio\")"
 - Rscript -e "library(TestWithRStudio); check_rstudio()"
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
