--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ script:
 - R CMD check *tar.gz
 
 - Rscript -e 'install.packages("devtools", repos="http://cran.rstudio.com/")'
+- Rscript -e 'install.packages("roxygen2", repos="http://cran.rstudio.com/")'
 - Rscript -e 'devtools::run_examples(run = FALSE)'
 
 - Rscript -e 'devtools::install_github("Non-Contradiction/TestWithRStudio")'
