--- a/.travis.yml
+++ b/.travis.yml
@@ -82,11 +82,8 @@ script:
 - R CMD build .
 - R CMD check *tar.gz
 
-- Rscript -e 'install.packages("devtools", repos="http://cran.rstudio.com/")'
-- Rscript -e 'install.packages("roxygen2", repos="http://cran.rstudio.com/")'
-- Rscript -e 'devtools::run_examples(run = FALSE)'
-
-- Rscript -e 'devtools::install_github("Non-Contradiction/TestWithRStudio")'
+- Rscript -e 'install.packages("remotes", repos="http://cran.rstudio.com/")'
+- Rscript -e 'remotes::install_github("Non-Contradiction/TestWithRStudio")'
 - Rscript -e "library(TestWithRStudio); check_rstudio()"
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
