--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ script:
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
 - Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
 
-- Rscript -e 'devtools::install_github("Non-Contradiction/JuliaCall")'
+- Rscript -e 'remotes::install_github("Non-Contradiction/JuliaCall")'
 #- julia -e 'Pkg.add("RCall")'
 #- julia -e 'using RCall'
 - Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(); get(\'call\', julia)(\'sqrt\', 2)', 60))"
