--- a/appveyor.yml
+++ b/appveyor.yml
@@ -80,7 +80,7 @@ test_script:
 #- R CMD build .
 #- R CMD check *tar.gz
 
-- Rscript -e "install.packages(\"devtools\", repos=\"http://cran.rstudio.com/\", quiet = TRUE, dependencies = c("Depends", "Imports", "LinkingTo", "Suggests"))"
+- Rscript -e "install.packages(\"devtools\", repos=\"http://cran.rstudio.com/\", quiet = TRUE, dependencies = c(\"Depends\", \"Imports\", \"LinkingTo\", \"Suggests\"))"
 - Rscript -e "devtools::check()"
 
 - Rscript -e "devtools::install_github(\"Non-Contradiction/TestWithRStudio\")"
