Use compareVersion, which resolves potential future bugs.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ URL: https://github.com/Non-Contradiction/JuliaCall
 BugReports: https://github.com/Non-Contradiction/JuliaCall/issues
 Encoding: UTF-8
 LazyData: true
-Imports: inline
+Imports: inline,
+    utils
 RoxygenNote: 6.0.1
 SystemRequirements: Julia >= 0.5.0, RCall.jl
 Suggests: testthat
