New julia$console!!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(julia_assign)
 export(julia_call)
 export(julia_check)
 export(julia_command)
+export(julia_console)
 export(julia_do.call)
 export(julia_eval_string)
 export(julia_exists)
