--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,8 @@ before_install:
 
   - Rscript -e 'install.packages("inline", repos="http://cran.rstudio.com/")'
   - Rscript -e 'install.packages("testthat", repos="http://cran.rstudio.com/")'
+  - Rscript -e 'install.packages("knitr", repos="http://cran.rstudio.com/")'
+  - Rscript -e 'install.packages("rmarkdown", repos="http://cran.rstudio.com/")'
 
   #- Rscript -e 'sessionInfo()'
   #- julia -e 'versioninfo()'
