--- a/appveyor.yml
+++ b/appveyor.yml
@@ -76,6 +76,8 @@ build_script:
 - Rscript -e "sessionInfo()"
 - Rscript -e "install.packages(\"inline\", repos=\"http://cran.rstudio.com/\")"
 - Rscript -e "install.packages(\"testthat\", repos=\"http://cran.rstudio.com/\")"
+- Rscript -e "install.packages(\"knitr\", repos=\"http://cran.rstudio.com/\")"
+- Rscript -e "install.packages(\"rmarkdown\", repos=\"http://cran.rstudio.com/\")"
 
 test_script:
 - R CMD build .
