Save time on CI.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -88,16 +88,16 @@ test_script:
 - R CMD build .
 - R CMD check *tar.gz
 
-- Rscript -e "install.packages(\"remotes\", repos=\"http://cran.rstudio.com/\")"
-- Rscript -e "remotes::install_github(\"Non-Contradiction/TestWithRStudio\")"
-- Rscript -e "library(TestWithRStudio); check_rstudio()"
-- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
-- Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
+#- Rscript -e "install.packages(\"remotes\", repos=\"http://cran.rstudio.com/\")"
+#- Rscript -e "remotes::install_github(\"Non-Contradiction/TestWithRStudio\")"
+#- Rscript -e "library(TestWithRStudio); check_rstudio()"
+#- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('1'))"
+#- Rscript -e "library(TestWithRStudio); stopifnot(!check_in_rstudio('q()'))"
 
-- Rscript -e "remotes::install_github(\"Non-Contradiction/JuliaCall\")"
+#- Rscript -e "remotes::install_github(\"Non-Contradiction/JuliaCall\")"
 #- julia -e 'Pkg.add("RCall")'
 #- julia -e 'using RCall'
-- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(); get(\'call\', julia)(\'sqrt\', 2)', 60))"
+#- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(); get(\'call\', julia)(\'sqrt\', 2)', 60))"
 
 on_finish:
 # uncomment to enable RDP to Appveyor
