Deprecate julia_eval_string in favor of julia_eval

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(julia_check)
 export(julia_command)
 export(julia_console)
 export(julia_do.call)
+export(julia_eval)
 export(julia_eval_string)
 export(julia_exists)
 export(julia_help)
