--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,13 @@ environment:
   NOT_CRAN: "true"
   matrix:
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.5/julia-0.5-latest-win64.exe"
-    R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.4.1-win.exe"
+    R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.4.2-win.exe"
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.6/julia-0.6-latest-win64.exe"
-    R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.4.1-win.exe"
-#  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.5/julia-0.5-latest-win64.exe"
-#    R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
-#  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.6/julia-0.6-latest-win64.exe"
-#    R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
+    R_URL: "https://cran.rstudio.com/bin/windows/base/R-3.4.2-win.exe"
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.5/julia-0.5-latest-win64.exe"
+    R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
+  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.6/julia-0.6-latest-win64.exe"
+    R_URL: "https://cran.rstudio.com/bin/windows/base/R-devel-win.exe"
 
 notifications:
   - provider: Email
