--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,5 +25,6 @@ RoxygenNote: 6.0.1
 SystemRequirements: Julia >= 0.5.0, RCall.jl
 Suggests: testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    png
 VignetteBuilder: knitr
