--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,5 @@ RoxygenNote: 6.0.1
 SystemRequirements: Julia >= 0.5.0, RCall.jl
 Suggests: testthat,
     knitr,
-    rmarkdown,
-    png
+    rmarkdown
 VignetteBuilder: knitr
