--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ S3method(as.double,JuliaObject)
 S3method(as.list,JuliaObject)
 S3method(exp,JuliaObject)
 S3method(length,JuliaObject)
-S3method(print,JuliaObject)
 S3method(sum,JuliaObject)
 export("%>J%")
 export(JuliaObject)
@@ -36,3 +35,4 @@ export(julia_setup)
 export(julia_source)
 export(julia_update_package)
 export(plotsViewer)
+exportMethods(show)
