--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ exportMethods("%/%")
 exportMethods(Arith)
 exportMethods(Compare)
 exportMethods(Math)
-exportMethods(Math2)
 exportMethods(Summary)
+exportMethods(round)
 exportMethods(show)
+exportMethods(signif)
