Finish the definition for Math generics group for JuliaObject.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,12 @@ exportMethods(Arith)
 exportMethods(Compare)
 exportMethods(Math)
 exportMethods(Summary)
+exportMethods(ceiling)
+exportMethods(cummax)
+exportMethods(cummin)
+exportMethods(cumprod)
+exportMethods(cumsum)
 exportMethods(round)
 exportMethods(show)
 exportMethods(signif)
+exportMethods(tanpi)
