--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method("[[",JuliaObject)
 S3method(as.character,JuliaObject)
 S3method(as.double,JuliaObject)
 S3method(as.list,JuliaObject)
+S3method(as.logical,JuliaObject)
 S3method(length,JuliaObject)
 export("%>J%")
 export(JuliaObject)
@@ -31,6 +32,7 @@ exportMethods("%%")
 exportMethods("%/%")
 exportMethods(Arith)
 exportMethods(Compare)
+exportMethods(Logic)
 exportMethods(Math)
 exportMethods(Summary)
 exportMethods(ceiling)
