--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method("[",JuliaObject)
 S3method("[[",JuliaObject)
 S3method(as.character,JuliaObject)
 S3method(as.double,JuliaObject)
+S3method(as.integer,JuliaObject)
 S3method(as.list,JuliaObject)
 S3method(as.logical,JuliaObject)
 S3method(length,JuliaObject)
