--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -12,4 +12,5 @@
 ^\.gitattributes$
 ^vignettes/JuliaCall_in_RMarkdown\.Rmd$
 ^vignettes/JuliaCall_in_RMarkdown_cache$
+^vignettes/mandelbrot\.Rmd$
 ^revdep$
