--- a/.travis.yml
+++ b/.travis.yml
@@ -76,13 +76,13 @@ before_install:
 
   #- Rscript -e 'sessionInfo()'
   #- julia -e 'versioninfo()'
-  #- julia -e 'Pkg.add("RCall")'
+  - julia -e 'Pkg.add("RCall")'
   #- R RHOME
   #- julia -e 'println(readchomp(`R RHOME`))'
   #- julia -e 'Rhome = readchomp(`R RHOME`); libR_dir = joinpath(Rhome,"lib"); libR = joinpath(Rhome,"lib","libR.$(Libdl.dlext)"); println(Rhome); println(isdir(Rhome)); println(libR_dir); println(isdir(libR_dir)); println(libR); println(isfile(libR)); println(Libdl.dlopen_e(libR))'
   #- ls $(R RHOME)
   #- ls $(R RHOME)/lib
-  #- julia -e 'using RCall'
+  - julia -e 'using RCall'
 script:
 - R CMD build .
 - R CMD check *tar.gz
