--- a/.travis.yml
+++ b/.travis.yml
@@ -97,3 +97,6 @@ script:
 #- julia -e 'Pkg.add("RCall")'
 #- julia -e 'using RCall'
 #- Rscript -e "library(TestWithRStudio); stopifnot(check_in_rstudio('library(JuliaCall); julia <- julia_setup(); get(\'call\', julia)(\'sqrt\', 2)', 60))"
+
+after_failure:
+  - cat /home/travis/build/Non-Contradiction/JuliaCall/JuliaCall.Rcheck/00check.log
